fixed issues found by the SonarCloud